Bug 158608 - The right context menu doesn't start with spelling suggestions in Calc (it does in Writer)
Summary: The right context menu doesn't start with spelling suggestions in Calc (it do...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:24.8.0 target:24.2.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: AutoCorrect-Complete
  Show dependency treegraph
 
Reported: 2023-12-08 20:04 UTC by Telesto
Modified: 2023-12-29 14:15 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (29.09 KB, image/jpeg)
2023-12-08 20:04 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2023-12-08 20:04:32 UTC
Description:
The right context menu doesn't start with spelling suggestions in Calc (it does in Writer)

Steps to Reproduce:
1. Open Calc (with English dictionary)
2. Write 'Oeps' (spell checking enabled)
3. Right Click 'Oeps'

Actual Results:
The context menu starts with Ignore all

Expected Results:
Starting with suggestions


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: a9ad36ae46ff76c0d59b0d170314fdd3a9ee5d35
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded
Comment 1 Telesto 2023-12-08 20:04:44 UTC
Created attachment 191321 [details]
Screenshot
Comment 2 Buovjaga 2023-12-21 13:32:29 UTC
Bibisected with win64-7.2 to 57544b075b77331b7b1cc7cb18898a52e7bb21a6
weld editview menu
Comment 3 Commit Notification 2023-12-29 13:55:08 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e48dbe4f14da4677db631edffc5275c3c24b3ede

Resolves: tdf#158608 put calc spelling suggestions at start of context menu

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-12-29 14:15:13 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/b7d1827e249a6ddc30dbe10945bff2f95842ce1d

Resolves: tdf#158608 put calc spelling suggestions at start of context menu

It will be available in 24.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.