Resolves: tdf#158608 put calc spelling suggestions at start of context menu

a problem since:

commit 57544b075b77331b7b1cc7cb18898a52e7bb21a6
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Sat Dec 12 21:21:09 2020 +0000

    weld editview menu

Change-Id: Id2ffd7f4f3da15d5c0ebc1c7a17247e8ab1ec5bc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161327
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>